# literature_aggregator

./: README.md  config.default.yaml  pyproject.toml
src/lit_agg/: __init__.py  cli.py  config.py  display.py  models.py
src/lit_agg/claude/: __init__.py  client.py  ranker.py  summarizer.py
src/lit_agg/sources/: __init__.py  arxiv_source.py  base.py
