[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lit-agg"
version = "0.1.0"
description = "CLI tool to fetch, summarize, and rank recent research papers using Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.43.0",
    "arxiv>=2.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.scripts]
lit-agg = "lit_agg.cli:app"
